k8s_files/redirect-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: staging
spec:
  redirectScheme:
    scheme: https
    permanent: true
