k8s_files/myapp-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: myapp-service
  namespace: myapp
spec:
  selector:
    app: myapp
  ports:
    - port: 8000
      targetPort: 8000
